cmake_minimum_required(VERSION 3.22)
project(ee205_lab_08d_animal_farm_1_to_clion)

set(CMAKE_CXX_STANDARD 14)

add_executable(ee205_lab_08d_animal_farm_1_to_clion main.cpp addCat.cpp addCat.h catDatabase.cpp catDatabase.h reportCat.cpp reportCat.h updateCat.cpp updateCat.h deleteCat.cpp deleteCat.h Cat.cpp Cat.h config.h Node.cpp Node.h List.cpp List.h Animal.cpp Animal.h Mammal.cpp Mammal.h Color.h Gender.cpp Gender.h Weight.cpp Weight.h SinglyLinkedList.cpp SinglyLinkedList.h)
